# serenade

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json
example/: Cargo.toml
macros/: BEST_PRACTICE.md  Cargo.toml  README.md  rust-toolchain.toml
macros/src/: commands.rs  env.rs  lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250129_000001_create_guilds_table.rs
proc_lib/: Cargo.toml
proc_lib/src/: lib.rs
src/: commands.rs  constants.rs  lib.rs  main.rs  middlewares.rs
src/commands/: structs.rs
src/db/: mod.rs  repository.rs
src/db/entities/: guilds.rs
src/handlers/: interaction.rs
structs/: Cargo.toml
structs/src/: lib.rs
